# OS

./: README.md
ex1/: CMakeLists.txt  Makefile  README  osm  osm.cpp  osm.h
ex2/: uthreads.cpp  uthreads.h
ex3/: CMakeLists.txt  Makefile  MapReduceFramework.cpp  README
ex4/: CMakeLists.txt  Makefile  MemoryConstants.h  PhysicalMemory.cpp  PhysicalMemory.h  README  SimpleTest.cpp  VirtualMemory.cpp  VirtualMemory.h  YaaraConstants.h  YaaraTest.cpp
ex4/tests_os_ex4/: CMakeLists.txt  Common.h  README.md  kb_tests.cpp
ex4/tests_os_ex4-master/: CMakeLists.txt  Common.h  README.md  kb_tests.cpp
ex4/tests_os_ex4/copy_to_your_project/: MemoryConstants.h  PhysicalMemory.cpp  PhysicalMemory.h
